fix: remove usage of deprecated newInstance() method (#203)